WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180578
Tools/ImageDiff/cg/PlatformImageCG.cpp doesn't need to include <wtf/MathExtras.h>
https://bugs.webkit.org/show_bug.cgi?id=180578
Summary
Tools/ImageDiff/cg/PlatformImageCG.cpp doesn't need to include <wtf/MathExtra...
Fujii Hironori
Reported
2017-12-08 02:05:02 PST
Tools/ImageDiff/cg/PlatformImageCG.cpp doesn't need to include <wtf/MathExtras.h> This is a sub-task of
Bug 180521
.
Attachments
Patch
(1.05 KB, patch)
2017-12-08 02:07 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2017-12-08 02:07:24 PST
Created
attachment 328800
[details]
Patch
WebKit Commit Bot
Comment 2
2017-12-08 06:00:19 PST
Comment on
attachment 328800
[details]
Patch Clearing flags on attachment: 328800 Committed
r225674
: <
https://trac.webkit.org/changeset/225674
>
WebKit Commit Bot
Comment 3
2017-12-08 06:00:21 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-12-08 06:01:37 PST
<
rdar://problem/35933272
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug