Tools/ImageDiff/cg/PlatformImageCG.cpp doesn't need to include <wtf/MathExtras.h> https://bugs.webkit.org/show_bug.cgi?id=180578

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2017-12-08
Reviewed by Konstantin Tokarev.

* ImageDiff/cg/PlatformImageCG.cpp: Removed unnecessary #include <wtf/MathExtras.h>.

Canonical link: https://commits.webkit.org/196494@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225674 268f45cc-cd09-0410-ab3c-d52691b4dbfc